# infrastructure-drop-ins

./: README.md
.github/workflows/: dropin.yaml
.github/workflows/dropin/: README.md  dropin.cabal
drop-in/: index.html
workflows/dropin/: .gitignore  cabal.project.freeze  dropin.hs
